--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="th">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LottoKit - เข้าสู่ระบบ</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <div class="login-container">
-        <div class="logo">
-            <h1>LottoKit</h1>
-            <p>ระบบจัดการโพยหวยสำหรับเจ้ามือ</p>
+      <div class="logo">
+        <h1>LottoKit</h1>
+        <p>ระบบจัดการโพยหวยสำหรับเจ้ามือ</p>
+      </div>
+      <!-- แก้ไข form login -->
+      <form id="loginForm">
+        <div class="form-group">
+          <label for="username">ชื่อผู้ใช้</label>
+          <input type="text" id="username" required />
         </div>
-        <form id="loginForm">
-            <div class="form-group">
-                <label for="username">ชื่อผู้ใช้</label>
-                <input type="text" id="username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">รหัสผ่าน</label>
-                <input type="password" id="password" required>
-            </div>
-            <button type="submit" class="btn">เข้าสู่ระบบ</button>
-        </form>
+        <div class="form-group">
+          <label for="password">รหัสผ่าน</label>
+          <input type="password" id="password" required />
+        </div>
+        <button type="submit" class="btn">เข้าสู่ระบบ</button>
+      </form>
     </div>
     <script src="js/google-sheets.js"></script>
     <script src="js/app.js"></script>
-</body>
+  </body>
 </html>
